kubernetes/form-app-k8s/api-deploy.yaml
---
# form-api deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: form-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: form-api
  template:
    metadata:
      labels:
        app: form-api
    spec:
      containers:
        - name: form-api
          image: ghcr.io/conicuznhm/form-api:1.0.8
          ports:
            - containerPort: 8899
          readinessProbe:
            httpGet:
              path: /health
              port: 8899
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
        - name: script-volume
          configMap:
            name: wait-for-psql-script # configMap with script to wait for psql service
            items:
              - key: wait-for-psql.sh
                path: wait-for-psql.sh
                mode: 0755
      imagePullSecrets:
        - name: ghcr-secret # credentail for pulling image from private registry
      # restartPolicy: Always # always restart the container if it fails, for development only Always is allowed and automatically default set by kubernetes 
      # for pod restart policy is no default set, must set manually (Always, OnFailure, Never)
---
# api service
apiVersion: v1
kind: Service
metadata:
  name: form-api # name of the service must match proxy_pass in nginx config location /api/ (http://form-api:8899;), and also must match hostname and port in initiContainer wait-for-api
spec:
  type: ClusterIP
  selector:
    app: form-api # selector must match app label in deployment template metadata (labels: app: form-api)
  ports:
    - protocol: TCP
      port: 8899
      targetPort: 8899
---

# //cmd to create secret for docker registry to pull image from private github-container-registry(ghcr)
# kubectl create secret docker-registry ghcr-secret \
# --docker-server=https://ghcr.io \
# --docker-username=<GITHUB_USERNAME> \
# --docker-password=<GITHUB_TOKEN_PAT classic for ghcr.io> \
# --docker-email=<EMAIL> (optional, kubernetes 1.9+ does not require email for ghcr.io)

# //with kubeseal
# //cmd to create secret for docker registry to pull image from private github-container-registry(ghcr)
# kubectl create secret docker-registry ghcr-secret \
# --docker-server=https://ghcr.io \
# --docker-username=<GITHUB_USERNAME> \
# --docker-password=<GITHUB_TOKEN_PAT classic for ghcr.io> \
# --dry-run=client -o json > ghcr-secret.json

# //client -o can set to json, yaml, etc.

# //cmd to seal the secret (don't forget to --format=yaml to get yaml output)
# kubeseal --controller-name=sealed-secrets --controller-namespace=kube-system --format=yaml < ghcr-secret.json > sealed-ghcr-secret.yaml
#                      pod name                         namespace    
# //or
# kubeseal \
#   --controller-name=sealed-secrets \
#   --controller-namespace=kube-system \
#   --format=yaml \
#   < ghcr-secret.json > sealed-ghcr-secret.yaml
