kubernetes/form-app-k8s/form-ingress.yaml
---
# //note: This file is used to create an Ingress resource for the form application.
# //don't kubectl apply ingress.yaml, if the image already installed cloudflared and run cloudflared tunnel 
# vite nginx ingress

# //wildcard version of path and host
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: vite-ingress
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /$1
# spec:
#   rules:
#     # - host: vite.local # change this to your domain or IP
#     - host: "" # use empty host ("") to match all requests
#       http:
#         paths:
#           - path: /(.*) # match all paths
#             pathType: Prefix
#             backend:
#               service:
#                 name: form-vite # name of the service must match service name in vite-deploy.yaml
#                 port:
#                   number: 80 # port of the service
# ---

# //specific version of path and host
# //url = vite.local/form --> forward to --> form-vite service
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vite-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    # - host: vite.local # change this to your domain or IP
    - host: vite.local # use empty host ("") to match all requests
      http:
        paths:
          - path: /form # match specific path
            pathType: Prefix
            backend:
              service:
                name: form-vite # name of the service must match service name in vite-deploy.yaml
                port:
                  number: 80 # port of the service
---
# //accessing http://vite.local/form will forward to form-vite service
# //to map port vmware port 8888 to port 80 of the service
# //kubectl port-forward --address 0.0.0.0 --namespace ingress-nginx service/ingress-nginx-controller 8888:80
# //now can access http://localhost:8888/form

# //or use /etc/hosts to map vite.local
# //sudo vi /etc/hosts
# //add this below line to /etc/hosts    
# //127.0.0.1   vite.local
# //now can access http://vite.local:8888/form
